# prem-python-sdk

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  Manifest.in  README.md  genindex.html  index.html  objects.inv  prem.client.html  prem.resources.completions.html  prem.resources.datapoints.html  prem.resources.embeddings.html  prem.resources.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py
.doctrees/: environment.pickle  index.doctree  prem.client.doctree  prem.resources.completions.doctree  prem.resources.datapoints.doctree  prem.resources.doctree  prem.resources.embeddings.doctree
.github/scripts/: get_version.py
.github/workflows/: delete-version.yaml  documentation.yaml  publish.yaml  release.yaml
_sources/: prem.client.rst.txt  prem.resources.completions.rst.txt
docs/source/: conf.py  index.rst  prem.resources.datapoints.rst  prem.resources.embeddings.rst  prem.resources.rst
prem/: __init__.py  client.py  exceptions.py  resource.py  utils.py
prem/resources/: __init__.py  completions.py
premai/: __init__.py  client.py  errors.py  types.py
premai/api/: __init__.py
premai/models/: __init__.py  api_projects_data_points_create_data_body.py  api_projects_data_points_create_files_body.py  api_projects_data_points_create_json_body.py  api_projects_data_points_create_response_201.py  api_projects_data_points_list_response_200_item.py  api_projects_data_points_partial_update_data_body.py  api_projects_data_points_partial_update_files_body.py  api_projects_data_points_partial_update_json_body.py  api_projects_data_points_partial_update_response_200.py  api_projects_data_points_retrieve_response_200.py  api_projects_data_points_update_data_body.py  api_projects_data_points_update_files_body.py  api_projects_data_points_update_json_body.py  api_projects_data_points_update_response_200.py  api_projects_traces_create_data_body.py  api_projects_traces_create_data_body_raw_request_type_0.py  api_projects_traces_create_data_body_raw_response_type_0.py  api_projects_traces_create_files_body.py  api_projects_traces_create_files_body_raw_request_type_0.py  api_projects_traces_create_files_body_raw_response_type_0.py  api_projects_traces_create_json_body.py  auth_token.py  (+369 more)
(+61 files in other folders)
