[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.urls]
documentation = "https://premai-io.github.io/prem-python-sdk/"
readme = "README.md"
repository = "https://github.com/premAI-io/prem-python-sdk"
changelog = "https://github.com/premAI-io/prem-python-sdk/releases"

[project]
name = "premai"
dynamic = ["version", "dependencies"]
maintainers = [{name = "Nicola Sosio", email = "nicola@premai.io"}]
description = "The Prem Python SDK is a Python library for interacting with prem-saas"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3 :: Only"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
